--- a/se/cs/umu/App/Debugger.form
+++ b/se/cs/umu/App/Debugger.form
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="se.cs.umu.App.Debugger">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="50" bottom="50" right="50"/>
     <constraints>
       <xy x="16" y="17" width="414" height="373"/>
     </constraints>
     <properties>
-      <background color="-11645362"/>
+      <background color="-1"/>
       <foreground color="-1"/>
     </properties>
     <border type="empty" title-position="2">
@@ -14,12 +14,38 @@
       <title-color color="-658689"/>
     </border>
     <children>
-      <component id="cf283" class="javax.swing.JButton" binding="thisButtonDoesNothingButton" default-binding="true">
+      <component id="cf283" class="javax.swing.JButton" binding="button1">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="This button does nothing"/>
+          <text value="Send"/>
+        </properties>
+      </component>
+      <component id="8c520" class="javax.swing.JTextArea" binding="textArea1">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-4276546"/>
+          <editable value="false"/>
+          <focusable value="false"/>
+        </properties>
+      </component>
+      <component id="a9854" class="javax.swing.JTextField" binding="textField1">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <name value=""/>
+          <selectionEnd value="0"/>
+          <selectionStart value="0"/>
+          <text value=""/>
+          <toolTipText value="Enter message here"/>
         </properties>
       </component>
     </children>
