--- a/se/cs/umu/App/Debugger.form
+++ b/se/cs/umu/App/Debugger.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="se.cs.umu.App.Debugger">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="50" bottom="50" right="50"/>
     <constraints>
-      <xy x="16" y="17" width="414" height="373"/>
+      <xy x="16" y="17" width="604" height="373"/>
     </constraints>
     <properties>
       <background color="-1"/>
@@ -14,29 +14,46 @@
       <title-color color="-658689"/>
     </border>
     <children>
-      <component id="cf283" class="javax.swing.JButton" binding="button1">
+      <scrollpane id="a490c">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="Send"/>
-        </properties>
-      </component>
-      <component id="8c520" class="javax.swing.JTextArea" binding="textArea1">
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="ad3f5" class="javax.swing.JList" binding="list1" default-binding="true">
+            <constraints/>
+            <properties>
+              <background color="-4342339"/>
+              <dropMode value="INSERT"/>
+              <enabled value="true"/>
+              <foreground color="-16777216"/>
+              <opaque value="true"/>
+              <selectionMode value="0"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="1000f" class="javax.swing.JTextField" binding="textField2" default-binding="true">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
+          <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
+        <properties/>
+      </component>
+      <component id="6f360" class="javax.swing.JButton" binding="button2">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
         <properties>
-          <background color="-4276546"/>
-          <editable value="false"/>
-          <focusable value="false"/>
+          <hideActionText value="false"/>
+          <text value="Create Group"/>
         </properties>
       </component>
       <component id="a9854" class="javax.swing.JTextField" binding="textField1">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -46,6 +63,79 @@
           <selectionStart value="0"/>
           <text value=""/>
           <toolTipText value="Enter message here"/>
+        </properties>
+      </component>
+      <scrollpane id="e5c85">
+        <constraints>
+          <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="8c520" class="javax.swing.JTextArea" binding="textArea1">
+            <constraints/>
+            <properties>
+              <background color="-4276546"/>
+              <editable value="false"/>
+              <focusable value="false"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="cf283" class="javax.swing.JButton" binding="button1">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Send"/>
+        </properties>
+      </component>
+      <component id="c9b31" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Available Groups"/>
+        </properties>
+      </component>
+      <component id="d5378" class="javax.swing.JLabel" binding="label1">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Chat"/>
+        </properties>
+      </component>
+      <component id="3bfb6" class="javax.swing.JButton" binding="button3">
+        <constraints>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Join Group"/>
+        </properties>
+      </component>
+      <scrollpane id="8717f">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="65766" class="javax.swing.JList" binding="list2" default-binding="true">
+            <constraints/>
+            <properties>
+              <background color="-4342339"/>
+              <dropMode value="INSERT"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="ec0ef" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Joined Groups"/>
         </properties>
       </component>
     </children>
