--- a/se/cs/umu/App/Debugger.form
+++ b/se/cs/umu/App/Debugger.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="13" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="50" bottom="50" right="50"/>
     <constraints>
-      <xy x="16" y="17" width="689" height="460"/>
+      <xy x="16" y="17" width="807" height="465"/>
     </constraints>
     <properties>
       <background color="-1"/>
@@ -16,7 +16,7 @@
     <children>
       <scrollpane id="a490c">
         <constraints>
-          <grid row="1" column="2" row-span="5" col-span="3" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="5" col-span="3" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -36,7 +36,7 @@
       </scrollpane>
       <component id="1000f" class="javax.swing.JTextField" binding="textField2" default-binding="true">
         <constraints>
-          <grid row="11" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="11" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -44,7 +44,7 @@
       </component>
       <component id="a9854" class="javax.swing.JTextField" binding="textField1">
         <constraints>
-          <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -66,6 +66,7 @@
           <component id="8c520" class="javax.swing.JTextArea" binding="textArea1">
             <constraints/>
             <properties>
+              <autoscrolls value="true"/>
               <background color="-4276546"/>
               <editable value="false"/>
               <focusable value="false"/>
@@ -81,14 +82,6 @@
           <text value="Send"/>
         </properties>
       </component>
-      <component id="c9b31" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Available Groups"/>
-        </properties>
-      </component>
       <component id="d5378" class="javax.swing.JLabel" binding="label1">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
@@ -97,17 +90,9 @@
           <text value="Chat"/>
         </properties>
       </component>
-      <component id="3bfb6" class="javax.swing.JButton" binding="button3">
-        <constraints>
-          <grid row="12" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Join Group"/>
-        </properties>
-      </component>
       <scrollpane id="8717f">
         <constraints>
-          <grid row="7" column="2" row-span="4" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="1" row-span="4" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -123,19 +108,11 @@
       </scrollpane>
       <component id="6f360" class="javax.swing.JButton" binding="button2">
         <constraints>
-          <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <hideActionText value="false"/>
           <text value="Create Group"/>
-        </properties>
-      </component>
-      <component id="ec0ef" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Joined Groups"/>
         </properties>
       </component>
       <component id="76cfd" class="javax.swing.JLabel">
@@ -178,6 +155,41 @@
           <text value="Intercept"/>
         </properties>
       </component>
+      <component id="3bfb6" class="javax.swing.JButton" binding="button3">
+        <constraints>
+          <grid row="12" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="27" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Join Group"/>
+        </properties>
+      </component>
+      <component id="ec0ef" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Joined Groups"/>
+        </properties>
+      </component>
+      <scrollpane id="54824">
+        <constraints>
+          <grid row="1" column="4" row-span="10" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="3b952" class="javax.swing.JTextArea" binding="textArea2" default-binding="true">
+            <constraints/>
+            <properties>
+              <autoscrolls value="true"/>
+              <background color="-4276546"/>
+              <editable value="false"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
   <buttonGroups>
