--- a/se/cs/umu/App/DebuggerGUI.form
+++ b/se/cs/umu/App/DebuggerGUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="13" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="50" bottom="50" right="50"/>
     <constraints>
-      <xy x="16" y="17" width="807" height="465"/>
+      <xy x="16" y="17" width="836" height="539"/>
     </constraints>
     <properties>
       <background color="-1"/>
@@ -76,7 +76,7 @@
       </scrollpane>
       <component id="cf283" class="javax.swing.JButton" binding="button1">
         <constraints>
-          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Send"/>
@@ -84,7 +84,7 @@
       </component>
       <component id="d5378" class="javax.swing.JLabel" binding="label1">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Chat"/>
@@ -108,7 +108,7 @@
       </scrollpane>
       <component id="6f360" class="javax.swing.JButton" binding="button2">
         <constraints>
-          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <hideActionText value="false"/>
@@ -117,7 +117,7 @@
       </component>
       <component id="76cfd" class="javax.swing.JLabel">
         <constraints>
-          <grid row="7" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Release Intercepted"/>
@@ -155,19 +155,9 @@
           <text value="Intercept"/>
         </properties>
       </component>
-      <component id="3bfb6" class="javax.swing.JButton" binding="button3">
-        <constraints>
-          <grid row="12" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="27" height="30"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Join Group"/>
-        </properties>
-      </component>
       <component id="ec0ef" class="javax.swing.JLabel">
         <constraints>
-          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Joined Groups"/>
@@ -190,6 +180,40 @@
           </component>
         </children>
       </scrollpane>
+      <component id="c7e03" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Available Groups"/>
+        </properties>
+      </component>
+      <component id="246fe" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Ordering Buffer Contents"/>
+        </properties>
+      </component>
+      <component id="3bfb6" class="javax.swing.JButton" binding="button3">
+        <constraints>
+          <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="27" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Join Group"/>
+        </properties>
+      </component>
+      <component id="833b2" class="javax.swing.JButton" binding="button4">
+        <constraints>
+          <grid row="12" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Leave Group"/>
+        </properties>
+      </component>
     </children>
   </grid>
   <buttonGroups>
