Refresh knapp, borde funka

--- a/se/cs/umu/App/DebuggerGUI.form
+++ b/se/cs/umu/App/DebuggerGUI.form
@@ -231,6 +231,14 @@
                   <text value="Oldest"/>
                 </properties>
               </component>
+              <component id="191f9" class="javax.swing.JButton" binding="refreshButton" default-binding="true">
+                <constraints>
+                  <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Refresh"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="a3970" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
